tests/fixtures/go/valid/person-package/go.mod
module person-example

go 1.21