tests/fixtures/go/invalid/syntax-error/go.mod
module syntax-error-example

go 1.21